--- a/app/src/main/res/layout/activity_choosemap.xml
+++ b/app/src/main/res/layout/activity_choosemap.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/spacebackground"
+        />
     <Button
         android:id="@+id/btn_choosemap_back"
         android:layout_width="wrap_content"
@@ -23,6 +29,7 @@
         app:layout_constraintTop_toBottomOf="@id/btn_choosemap_back"
         >
     </androidx.recyclerview.widget.RecyclerView>
+
 
 
 
