--- a/app/src/main/res/layout/activity_setuppage.xml
+++ b/app/src/main/res/layout/activity_setuppage.xml
@@ -149,7 +149,9 @@
         app:layout_constraintBottom_toTopOf="@id/btn_setuppage_play"
         android:text="Map Name"
         android:textSize="28dp"
-        android:layout_marginBottom="30dp"></TextView>
+        android:layout_marginBottom="30dp"
+        android:textColor="@color/white"
+        ></TextView>
 
     <Button
         android:id="@+id/btn_setuppage_play"
