--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="55dp"
-    android:layout_height="55dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.appcompat.widget.LinearLayoutCompat layout_width="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_margin="20dp"
+    android:orientation="vertical"
+    android:layout_gravity="center_horizontal">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_choosemap_button"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Map name"
+        android:textColor="@color/white"
+        android:padding="10dp"
+        android:background="@color/gray"
+        android:layout_gravity="center"
         >
     </androidx.appcompat.widget.AppCompatButton>
+</androidx.appcompat.widget.LinearLayoutCompat>
 
-</androidx.cardview.widget.CardView>
+
