--- a/app/src/main/res/layout/activity_choosemap.xml
+++ b/app/src/main/res/layout/activity_choosemap.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <pl.droidsonroids.gif.GifImageView
@@ -11,6 +11,19 @@
         android:scaleType="centerCrop"
         android:src="@drawable/spacebackground"
         />
+
+    <TextView
+        android:id="@+id/tv_choosemap_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Map"
+        android:textSize="50dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_choosemap_back"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <Button
         android:id="@+id/btn_choosemap_back"
         android:layout_width="wrap_content"
@@ -18,18 +31,32 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:text="Back"
-        android:layout_margin="10dp">
+        android:layout_margin="20dp">
     </Button>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:orientation="horizontal"
-        android:id="@+id/rv_buttons"
-        android:layout_width="match_parent"
-        android:layout_height="470dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_choosemap_back"
-        >
-    </androidx.recyclerview.widget.RecyclerView>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_choosemap_title"
+        android:gravity="center"
+        >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_buttons"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="50dp"
+            android:background="@color/gray"
+            android:orientation="vertical"
+            android:paddingLeft="100dp"
+            android:paddingRight="100dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
 
 
 
