--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -18,8 +18,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:text="Quit"
-        android:layout_margin="10dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp">
     </Button>
+
     <TextView
         android:id="@+id/tv_gameplay_mapname"
         android:layout_width="wrap_content"
@@ -29,8 +31,11 @@
         android:text="Map"
         android:textSize="28dp"
         android:textColor="@color/white"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         >
     </TextView>
+
     <GridLayout
         android:id="@+id/gl_gameplay_mapbg"
         android:layout_width="match_parent"
@@ -38,6 +43,7 @@
         app:layout_constraintTop_toBottomOf="@id/btn_gameplay_quit"
         android:columnCount="5"
         android:padding="1dp"
+        android:layout_marginTop="20dp"
         >
         <ImageView
             android:layout_height="75dp"
@@ -224,6 +230,7 @@
 
 
     </GridLayout>
+
     <GridLayout
         android:id="@+id/gl_gameplay_map"
         android:layout_width="match_parent"
@@ -231,7 +238,9 @@
         app:layout_constraintTop_toBottomOf="@id/btn_gameplay_quit"
         android:columnCount="5"
         android:padding="1dp"
+        android:layout_marginTop="20dp"
         >
+
         <Button
             android:id="@+id/btn_gameplay_29"
             android:tag="29"
@@ -505,6 +514,7 @@
             android:layout_margin="1dp"
             />
     </GridLayout>
+
     <TextView
         android:id="@+id/tv_roll_val"
         android:layout_width="wrap_content"
@@ -514,11 +524,12 @@
         app:layout_constraintBottom_toTopOf="@id/btn_gp_roll"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="62.5dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="10dp"
         android:textColor="@color/white"
         >
 
     </TextView>
+
     <Button
         android:id="@+id/btn_gp_roll"
         android:layout_width="wrap_content"
@@ -529,16 +540,18 @@
         android:layout_marginLeft="30dp"
         android:layout_marginBottom="50dp">
     </Button>
+
     <ImageView
         android:id="@+id/iv_gp_icon"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:src="@drawable/sample1"
         app:layout_constraintBottom_toTopOf="@id/tv_gp_turn"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginRight="55dp"
+        android:layout_marginBottom="20dp"
         ></ImageView>
+
     <TextView
         android:id="@+id/tv_gp_turn"
         android:layout_width="wrap_content"
@@ -547,8 +560,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:textSize="24dp"
         android:text="Current Player"
+        android:layout_marginBottom="20dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="15dp"
         android:textColor="@color/white"
         >
     </TextView>
