--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -46,180 +46,240 @@
         android:layout_marginTop="20dp"
         >
         <ImageView
+            android:id="@+id/iv_gp_29"
+            android:tag="29"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_28"
+            android:tag="28"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_27"
+            android:tag="27"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_26"
+            android:tag="26"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_25"
+            android:tag="25"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_20"
+            android:tag="20"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_21"
+            android:tag="21"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_22"
+            android:tag="22"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_23"
+            android:tag="23"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_24"
+            android:tag="24"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_19"
+            android:tag="19"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_18"
+            android:tag="18"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_17"
+            android:tag="17"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_16"
+            android:tag="16"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_15"
+            android:tag="15"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_10"
+            android:tag="10"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_11"
+            android:tag="11"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_12"
+            android:tag="12"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_13"
+            android:tag="13"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_14"
+            android:tag="14"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_9"
+            android:tag="9"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_8"
+            android:tag="8"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_7"
+            android:tag="7"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_6"
+            android:tag="6"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_5"
+            android:tag="5"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_0"
+            android:tag="0"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_1"
+            android:tag="1"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_2"
+            android:tag="2"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
             />
         <ImageView
+            android:id="@+id/iv_gp_3"
+            android:tag="3"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
         />
         <ImageView
+            android:id="@+id/iv_gp_4"
+            android:tag="4"
             android:layout_height="75dp"
             android:layout_width="80dp"
             android:background="@drawable/tile"
