--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -35,6 +35,224 @@
         android:layout_marginTop="20dp"
         >
     </TextView>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="475dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_gameplay_quit"
+        android:columnCount="5"
+        android:padding="1dp"
+        android:layout_marginTop="20dp">
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+        <ImageView
+            android:tag="29"
+            android:layout_height="75dp"
+            android:layout_width="80dp"
+            android:background="@drawable/tile"
+            android:layout_margin="1dp"
+            />
+    </GridLayout>
 
 
 
@@ -56,6 +274,9 @@
             android:text="29"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
 
         <ImageButton
@@ -66,6 +287,9 @@
             android:text="28"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
 
         <ImageButton
@@ -76,6 +300,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_26"
@@ -85,6 +312,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_25"
@@ -94,6 +324,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_20"
@@ -103,6 +336,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_21"
@@ -112,6 +348,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_22"
@@ -121,6 +360,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_23"
@@ -130,6 +372,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_24"
@@ -139,6 +384,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_19"
@@ -148,6 +396,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_18"
@@ -157,6 +408,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_17"
@@ -166,6 +420,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_16"
@@ -175,6 +432,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_15"
@@ -184,6 +444,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_10"
@@ -193,6 +456,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_11"
@@ -202,6 +468,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_12"
@@ -211,6 +480,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_13"
@@ -220,6 +492,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_14"
@@ -229,6 +504,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_9"
@@ -238,6 +516,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_8"
@@ -247,6 +528,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_7"
@@ -256,6 +540,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_6"
@@ -265,6 +552,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_5"
@@ -274,6 +564,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_0"
@@ -283,6 +576,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_1"
@@ -292,6 +588,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_2"
@@ -301,6 +600,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
 
             />
         <ImageButton
@@ -311,6 +613,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
         <ImageButton
             android:id="@+id/btn_gameplay_4"
@@ -320,6 +625,9 @@
             android:layout_width="80dp"
             android:background="@drawable/tile"
             android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
             />
     </GridLayout>
 
